--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
          "slim/slim": "^4.0",
          "firebase/php-jwt": "^4.0",
          "oscarotero/psr7-middlewares": "^3.20",
-         "illuminate/database": "@dev",
+         "illuminate/database": "^8.31",
          "slim/psr7": "^1.3",
          "nyholm/psr7": "^1.4",
          "nyholm/psr7-server": "^1.0",
